No way to deactivate GA Settings, deactivation button added - ADDED
Google map directions not working on detail page map - FIXED
CSS issue with map category show/hide icon - FIXED
Filters added to admin BCC emails - ADDED
Twenty Seventeen theme compatibility settings added - ADDED
geodir_save_post_info() now faster and escapes values better - CHANGED

v1.6.11
geodir_set_as_home rule still existed from depreciated option - FIXED
Registration box, changed Name/Email around so to work with browser save user/pass - CHANGED
Fix for primer theme edit place page - FIXED
Font awesome rating validation not working - FIXED
Admin BCC post_submit subject/message hooks not applied - FIXED
Google maps on some mobile devices adds a new span which breaks slide out menu - FIXED
Max and min map zoom levels set via hooks not working - FIXED
$extra_fields in custom field stripping slashes too early - FIXED
Email headers changed from string to array() and MIME-Version removed - CHANGED
Added filters to the add listing page title and description labels for difficult translations - ADDED
Reunion (island) added and Burma removed (replaced with Myanmar) - CHANGED
Payment manager restrict description input count can affect video tab - FIXED
WPML exclude cats on map does not work for translations of categories - FIXED
Dummy data section improved and additional industries added - ADDED
Empty price field outputs 0.00, now it is not displayed - CHANGED
On detail page current location parameters should be added to the term links - CHANGED
OpenStreetMap does not working when third party plugin using the Google Maps JS API - FIXED
GD listings query returns wrong total when category has sub categories - FIXED
BREAKING CHANGE: Google Analytics settings simplified, MUST be re-setup to continue use - BREAKING CHANGE
On multisite after import it shows wrong directory location to upload images - FIXED
alive_days column added in exported csv file - ADDED