@@ -127,6 +127,7 @@ function send_marker_jason_to_js()
                 if (!empty($cat_content_info)) {
                     $json_content = substr(implode(',', $cat_content_info), 1);
                     $json_content = htmlentities($json_content, ENT_QUOTES, get_option('blog_charset')); // Quotes in csv title import break maps - FIXED by kiran on 2nd March, 2016
+                    $json_content = wp_specialchars_decode($json_content); // Fixed #post-320722 on 2016-12-08
                     $canvas_jason = '[{"totalcount":"' . $totalcount . '",' . $json_content . ']';
                 } else {
                     $canvas_jason = '[{"totalcount":"0"}]';
